[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["iskusm <83928558+iskusm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
